syntax = "proto3";

package openraftpb;

message Status {
  uint32 code = 1;
  string message = 2;
}

message RaftRequest {
  string data = 1;
}

message RaftReply {
  string data = 1;
  string error = 2;
}
